# rimcol

./: .gitignore  Cargo.toml  LICENSE  README.md  requirements.txt  rustfmt.toml
.github/workflows/: rust-tests.yml
model/: model_definition.py
model_src/: generate_model.py  model_definition.py  resize_images.py  test_model.py
model_src/models/alpha/: keras_metadata.pb  saved_model.pb
model_src/models/alpha/variables/: variables.data-00000-of-00001  variables.index
model_src/models/beta/: keras_metadata.pb  saved_model.pb
model_src/models/beta/variables/: variables.index
model_src/models/logs/train/: events.out.tfevents.1643787144.gaurav-pc.163725.0.v2  events.out.tfevents.1643787651.gaurav-pc.164115.0.v2  events.out.tfevents.1643791830.gaurav-pc.169443.0.v2
src/: colorise.rs  main.rs
