[package]
name = "rimcol"
version = "0.1.1"
edition = "2021"
authors = ["Gaurav Pandey <gauravguitarrocks@gmail.com>"]
license = "MIT"
description = "A command line tool for converting greyscale to RGB using CNN modelling."
homepage = "https://github.com/ligmitz/rimcol"
repository = "https://github.com/ligmitz/rimcol"
documentation = "https://github.com/ligmitz/rimcol"
readme = "README.md"
categories = ["command-line-utilities"]
exclude = ["model_src/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rimcol"
path = "src/colorise.rs"

[[bin]]
name = "rimcol"
path = "src/main.rs"
doc = false

[dependencies]
tensorflow = "0.17.0"
image = "0.24.0"
lab = "0.11.0"
clap = { version = "3.0", features = ["derive"] }
whoami = "1.2.1"

[profile.release]
lto = true